cabal-version:      3.0
name:               ndbom
version:            0.1
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tristan Cacqueray
maintainer:         tdecacqu@redhat.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common executable
  ghc-options: -threaded -rtsopts -with-rtsopts=-T

common common
  build-depends:      base <5
  default-language:   GHC2021
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns -Wno-partial-type-signatures
    -fwrite-ide-info -Wno-missing-methods

  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    StrictData
    ViewPatterns
    DerivingStrategies
    QuasiQuotes
    DataKinds

executable ndbom
    import:         common, executable
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    aeson, base, turtle, optparse-applicative, rio, text, foldl, nix-derivation, attoparsec, containers
    hs-source-dirs:   .
    default-language: GHC2021
